# oop2_project-Abed_Khalil-Rayan_Abdalhalem

./: CMakeLists.txt  README.docx  README.md
cmake/: CompilerSettings.cmake
docs/: LevelConfig.md
include/: AnimationClip.h  Animator.h  BarracudaAnimator.h  BonusItem.h  BonusItemManager.h  CMakeLists.txt  CollisionDetector.h  CollisionSystem.h  Entity.h  Fish.h  FishAnimator.h  FishSpawner.h  FrenzySystem.h  Game.h  GameConstants.h  GenericFish.h  GrowthMeter.h  LargeFish.h  MediumFish.h  MenuState.h  OysterManager.h  ParticleSystem.h  PlayState.h  Player.h  PowerUp.h  ProgressBar.h  RandomGenerator.h  ResourceHolder.h  ScoreSystem.h  SmallFish.h  SpriteComponent.h  SpriteManager.h  State.h  VisualEffects.h
include/Core/: DefaultAudioPlayer.h  Game.h  GameConstants.h  GameExceptions.h  IAudioPlayer.h  MusicPlayer.h  ResourceHolder.h  SoundPlayer.h  State.h  StateManager.h  StateUtils.h
resources/: CMakeLists.txt  highscores.txt
resources/Fonts/: CMakeLists.txt
resources/Sound/: CMakeLists.txt
resources/Sound/BackgroundMusic/: CMakeLists.txt
resources/Sound/Sounds/: CMakeLists.txt
resources/Textures/: CMakeLists.txt
src/: AnimationClip.cpp  Animator.cpp  BarracudaAnimator.cpp  BonusItem.cpp  BonusItemManager.cpp  CMakeLists.txt  Entity.cpp  Fish.cpp  FishAnimator.cpp  FishSpawner.cpp  FrenzySystem.cpp  Game.cpp  GrowthMeter.cpp  LargeFish.cpp  Main.cpp  MediumFish.cpp  MenuState.cpp  OysterManager.cpp  PlayState.cpp  Player.cpp  PowerUp.cpp  ProgressBar.cpp  ScoreSystem.cpp  SmallFish.cpp  SpriteComponent.cpp  State.cpp  VisualEffects.cpp
(+153 files in other folders)
